# rust-ama-sdl2

./: .gitignore  README.md
lazy-foo/: Cargo.toml  README.md
lazy-foo/scripts/: gen_docsets.py
lazy-foo/src/: 02_image_on_screen.rs  03_event_driven.rs  04_key_presses.rs  05_optimized_loading_soft_stretching.rs  06_loading_pngs.rs  07_textures.rs  08_geometry.rs  09_viewport.rs  10_color_keying.rs  11_clip_rendering.rs  12_color_modulation.rs  13_alpha_blending.rs  14_animated_sprites.rs  15_rotation_flipping.rs  16_true_type_fonts.rs  17_mouse_events.rs  18_key_states.rs  21_sound_effects_and_music.rs  lib.rs
one-offs/: Cargo.toml
one-offs/src/: draw_to_texture.rs  lib.rs
